--- a/WrkEvent/WrkEvent.vcxproj.filters
+++ b/WrkEvent/WrkEvent.vcxproj.filters
@@ -19,30 +19,30 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Inf Include="KrnlAllocs.inf">
+    <Inf Include="WrkEvent.inf">
       <Filter>Driver Files</Filter>
     </Inf>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DrvMain.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Logging.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="KrnlAllocs.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="KaDrvR3.h">
+    <ClInclude Include="DrvR3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="WrkEvent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Logging.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="KrnlAllocs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="DrvMain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WrkEvent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Logging.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
