--- a/WrkEvClient/WrkEvClient.vcxproj
+++ b/WrkEvClient/WrkEvClient.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f44fae01-07c7-463c-a141-9f66630bc69d}</ProjectGuid>
-    <RootNamespace>MemTests</RootNamespace>
+    <ProjectGuid>{a3854fbc-4d4f-4d6f-b859-24bf6712f3e1}</ProjectGuid>
+    <RootNamespace>WrkEvClient</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -141,10 +141,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="MemTests.cpp" />
+    <ClCompile Include="WrkEvClient.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MemTests.h" />
+    <ClInclude Include="WrkEvClient.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
